# forma

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp
Canvas/: CanvasScene.cpp  CanvasScene.h  CanvasView.cpp  CanvasView.h
Commands/: AddShapeCommand.cpp  AddShapeCommand.h
Shapes/: EllipseShape.cpp  EllipseShape.h  RectangleShape.cpp  RectangleShape.h  Shape.cpp  Shape.h
Tools/: EllipseTool.cpp  RectangleTool.cpp  RectangleTool.h  SelectTool.cpp  SelectTool.h  Tool.h
